2012-05-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, test/test_oci8.rb: add OCI8's class variables:
	    @@environment_handle and @@process_handle.

2012-05-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocihandle.c, lib/oci8/metadata.rb, test/test_metadata.rb:
	    fix methods of OCI8::Metadata::Sequence and add testcases for them.

2012-05-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: refactor code which generates the
	    C extention name.

2012-05-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, lib/oci8/oci8.rb: delete private methods OCI8#server_handle
	    and OCI8#session_handle and use @server_handle and @session_handle instead.

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.2 and 2.1.1
	* VERSION: change the version to 2.1.2.

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb: disable statement caching by default.
	    This is workaround about a SIGSEGV issue.
	    See: https://github.com/rsim/oracle-enhanced/issues/162

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: delete code which overwrites signal handlers
	    registered by ruby. This was committed by mistake.
	    See: http://rubyforge.org/forum/forum.php?thread_id=50690&forum_id=1078

2012-04-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: fix internal heap error in OCI.
	    (github issue #12 reported by Yasuo Honda)

2012-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* VERSION: update to 2.1.1.
	* README.md: add links.

2012-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.0 and 2.1.1.
	* README -> README.md: renamed.
	* .yardopts: added for yard.
	* docs/install-binary-package.md, docs/report-installation-issue.md:
	    added.
	* docs/platform-specific-issues.md, lib/oci8/bindtype.rb, lib/oci8/connection_pool.rb
	  lib/oci8/object.rb, lib/oci8/properties.rb: fix documents.